--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <base href="./">
+  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -11,20 +11,20 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="example">
-  <link rel="apple-touch-icon" href="./icons/Icon-192.png">
+  <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="./favicon.png"/>
+  <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>example</title>
-  <link rel="manifest" href="./manifest.json">
+  <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "3160023748";
+    const serviceWorkerVersion = "2683748675";
   </script>
   <!-- This script adds the flutter initialization JS code -->
-  <script src="./flutter.js" defer></script>
+  <script src="flutter.js" defer></script>
   <script type="module" src="./assets/packages/flutter_3d_controller/assets/model-viewer.min.js" defer></script>
 </head>
 <body>
