--- a/index.html
+++ b/index.html
@@ -11,33 +11,30 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="example">
-  <link rel="apple-touch-icon" href="/E-Commerce/icons/Icon-192.png">
+  <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="/E-Commerce/favicon.png"/>
+  <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>example</title>
-  <link rel="manifest" href="/E-Commerce/manifest.json">
+  <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
     const serviceWorkerVersion = "1885668302";
   </script>
   <!-- This script adds the flutter initialization JS code -->
-  <script src="/E-Commerce/flutter.js" defer></script>
-  <script type="module" src="/E-Commerce/assets/packages/flutter_3d_controller/assets/model-viewer.min.js" defer></script>
+  <script src="flutter.js" defer></script>
+  <script type="module" src="./assets/packages/flutter_3d_controller/assets/model-viewer.min.js" defer></script>
 </head>
 <body>
   <script>
-    console.log("Loading flutter.js");
-    console.log("Loading model-viewer.min.js");
-
     window.addEventListener('load', function(ev) {
-      // Temporarily commenting out the service worker
+      // Download main.dart.js
       _flutter.loader.loadEntrypoint({
-        // serviceWorker: {
-        //   serviceWorkerVersion: serviceWorkerVersion,
-        // },
+        serviceWorker: {
+          serviceWorkerVersion: serviceWorkerVersion,
+        },
         onEntrypointLoaded: function(engineInitializer) {
           engineInitializer.initializeEngine().then(function(appRunner) {
             appRunner.runApp();
